--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,29 +14,30 @@ podTemplate(label:label,
             def repo = checkout scm
         }
 
-        stage('IFX_1 CONSUMER') {
-            container('helm') {
-              withEnv(['KUBECONFIG=/var/config/menya-test/kube-config-zmon.yml']) {
-                withFolderProperties{
-                  yaml.update file: 'values.yaml', update: ['.config.inputs[0].kafka_consumer.brokers[0]':"${env.KAFKA_BROKER_1}", '.config.inputs[0].kafka_consumer.brokers[1]':"${env.KAFKA_BROKER_2}", '.config.inputs[0].kafka_consumer.brokers[2]':"${env.KAFKA_BROKER_3}", '.config.inputs[0].kafka_consumer.topic':"telegraf__${TENANT}" , '.config.inputs[0].kafka_consumer.consumer_group':"consumer_${TENANT}_ifx1" , '.config.outputs[0].influxdb.urls[0]': "${IFX_1}",  '.config.outputs[0].influxdb.database': "zmon_${TENANT}", '.config.outputs[0].influxdb.username': "${TENANT}", '.config.outputs[0].influxdb.password': "${PASSWORD}"]
+        withCredentials([usernamePassword(credentialsId: 'influx_admin', usernameVariable: 'ADMIN', passwordVariable: 'ADMINPASS')]) {
+          stage('IFX_1 CONSUMER') {
+              container('helm') {
+                withEnv(['KUBECONFIG=/var/config/menya-test/kube-config-zmon.yml']) {
+                  withFolderProperties{
+                    yaml.update file: 'values.yaml', update: ['.config.inputs[0].kafka_consumer.brokers[0]':"${env.KAFKA_BROKER_1}", '.config.inputs[0].kafka_consumer.brokers[1]':"${env.KAFKA_BROKER_2}", '.config.inputs[0].kafka_consumer.brokers[2]':"${env.KAFKA_BROKER_3}", '.config.inputs[0].kafka_consumer.topic':"telegraf__${TENANT}" , '.config.inputs[0].kafka_consumer.consumer_group':"consumer_${TENANT}_ifx1" , '.config.outputs[0].influxdb.urls[0]': "${IFX_1}",  '.config.outputs[0].influxdb.database': "zmon_${TENANT}", '.config.outputs[0].influxdb.username': "${ADMIN}", '.config.outputs[0].influxdb.password': "${ADMINPASS}"]
+                  }
+                  sh "cat values.yaml"
+                  //sh 'helm install --namespace menya --name listenr-test -f values.yaml .'
                 }
-                sh "cat values.yaml"
-                //sh 'helm install --namespace menya --name listenr-test -f values.yaml .'
               }
-            }
-        }
+          }
 
-        stage('IFX_1 CONSUMER') {
-            container('helm') {
-              withEnv(['KUBECONFIG=/var/config/menya-test/kube-config-zmon.yml']) {
-                withFolderProperties{
-                  yaml.update file: 'values.yaml', update: ['.config.inputs[0].kafka_consumer.brokers[0]':"${env.KAFKA_BROKER_1}", '.config.inputs[0].kafka_consumer.brokers[1]':"${env.KAFKA_BROKER_2}", '.config.inputs[0].kafka_consumer.brokers[2]':"${env.KAFKA_BROKER_3}", '.config.inputs[0].kafka_consumer.topic':"telegraf__${TENANT}" , '.config.inputs[0].kafka_consumer.consumer_group':"consumer_${TENANT}_ifx2" , '.config.outputs[0].influxdb.urls[0]': "${IFX_2}",  '.config.outputs[0].influxdb.database': "zmon_${TENANT}", '.config.outputs[0].influxdb.username': "${TENANT}", '.config.outputs[0].influxdb.password': "${PASSWORD}"]
+          stage('IFX_1 CONSUMER') {
+              container('helm') {
+                withEnv(['KUBECONFIG=/var/config/menya-test/kube-config-zmon.yml']) {
+                  withFolderProperties{
+                    yaml.update file: 'values.yaml', update: ['.config.inputs[0].kafka_consumer.brokers[0]':"${env.KAFKA_BROKER_1}", '.config.inputs[0].kafka_consumer.brokers[1]':"${env.KAFKA_BROKER_2}", '.config.inputs[0].kafka_consumer.brokers[2]':"${env.KAFKA_BROKER_3}", '.config.inputs[0].kafka_consumer.topic':"telegraf__${TENANT}" , '.config.inputs[0].kafka_consumer.consumer_group':"consumer_${TENANT}_ifx2" , '.config.outputs[0].influxdb.urls[0]': "${IFX_2}",  '.config.outputs[0].influxdb.database': "zmon_${TENANT}", '.config.outputs[0].influxdb.username': "${ADMIN}", '.config.outputs[0].influxdb.password': "${ADMINPASS}"]
+                  }
+                  sh "cat values.yaml"
+                  //sh 'helm install --namespace menya --name listenr-test -f values.yaml .'
                 }
-                sh "cat values.yaml"
-                //sh 'helm install --namespace menya --name listenr-test -f values.yaml .'
               }
-            }
+          }
         }
-
     }
 }
