--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,13 +1,13 @@
-name: telegraf-s
-version: 1.8.1
-description: Telegraf is an agent written in Go for collecting, processing, aggregating, and writing metrics.
+apiVersion: v1
+description: Telegraf is an agent written in Go for collecting, processing, aggregating,
+  and writing metrics.
+home: https://www.influxdata.com/time-series-platform/telegraf/
 keywords:
 - telegraf
 - collector
 - timeseries
 - influxdata
-home: https://www.influxdata.com/time-series-platform/telegraf/
 maintainers:
-- name: 
-  email: 
-engine: gotpl
+- {}
+name: zmon-consumer
+version: 1.11.1
